# context-engineering-labs

./: .env.example  .gitignore  context_engineering_repo_skeleton_open_ai_first.md  fix_indentation_files.sh  pyproject.toml
docs/course/: HANDOFF.md  README.md  STATUS.md
examples/: week00_openai_smoke.py  week01_context_inspector.py  week02_compare_packers.py  week02_context_packer.py  week03_contract_demo.py  week04_injection_demo.py  week05_digest_demo.py  week06_tool_log_demo.py  week08_redteam_suite.py
scripts/: run_example.sh  run_redteam_openai.sh  run_smoke_openai.sh
src/: .cont.swp
src/context_engineering/: config.py  types.py
src/context_engineering/context/: budget.py  contract.py  digest.py  injection.py  inspector.py  packer.py  retrieval_bundle.py  tool_log.py
src/context_engineering/llm/: __init__.py  base.py  fake.py  openai_client.py
tests/: conftest.py  test_budget_and_packing.py  test_contracts.py  test_digest.py  test_injection.py  test_openai_smoke.py  test_tool_log.py
tests/cases/: conflict.json  injection.json  memory_poison.json  overflow.json  poisoned_retrieval.json  tool_hijack.json
